--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 }
 
 html, body {
-  height: 100%;
+  height: auto;
   margin: 0;
   padding: 0;
   overflow: hidden; /* 縦スクロールを潰す */
@@ -24,7 +24,6 @@ body{
   max-width:820px;
   margin:0 auto;
   padding:20px 16px 24px;
-  height:100%;
   display:flex;
   flex-direction:column;
 }
