delete login function

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,6 +1,6 @@
 :root{
-  --bg1:#cccccc;
-  --bg2:#595959;
+  --bg1:#8ec8d8;
+  --bg2:#a8e3d9;
   --radius: 26px;
 
   /* glass */
@@ -149,7 +149,7 @@ html, body{
   justify-content:space-between;
 }
 
-.title-big{
+/* .title-big{
   font-size: clamp(44px, 10vw, 64px);
   line-height: 1;
   font-weight: 900;
@@ -160,7 +160,10 @@ html, body{
   font-size: 36px;
   font-weight: 900;
   letter-spacing: .5px;
-}
+} */
+ .title-png{
+  margin-top: 10px;
+ }
 
 .oop-pill{
   border-radius: 999px;
@@ -532,105 +535,4 @@ html, body{
   background: rgba(255,255,255,.25);
   backdrop-filter:none;
   -webkit-backdrop-filter:none;
-}
-
-.auth-modal{ 
-  position:fixed; 
-  inset:0; 
-  display:none; 
-  z-index:9999; 
-}
-
-.auth-modal.is-open{ 
-  display:block; 
-}
-
-.auth-backdrop{ 
-  position:absolute; 
-  inset:0; 
-  background:rgba(0,0,0,.45); 
-}
-
-.auth-panel{
-  position:relative;
-  max-width:420px;
-  margin:10vh auto;
-  background:#fff;
-  border-radius:14px;
-  padding:14px;
-}
-
-.auth-head{ 
-  display:flex; 
-  justify-content:space-between; 
-  align-items:center; 
-  gap:10px; 
-}
-
-.auth-head h3{ 
-  margin:0; 
-}
-
-.auth-tabs{ 
-  display:flex; 
-  gap:8px; 
-  margin:10px 0; 
-}
-
-.auth-tab{ 
-  flex:1; 
-  padding:10px; 
-  border-radius:10px; 
-  border:1px solid #ddd; 
-  background:#f6f6f6; 
-}
-
-.auth-tab.is-active{ 
-  background:#fff; 
-  border-color:#aaa; 
-}
-
-#authForm input{ 
-  width:95%; 
-  padding:10px; 
-  border-radius:20px; 
-  border:1px solid #ccc; 
-  margin-top:8px; 
-  background: rgba(255,255,255,0.3);
-}
-
-#authSubmitBtn{ 
-  width:100%; 
-  margin-top:12px; 
-  padding:10px; 
-  border-radius:10px; 
-  border:0; 
-  cursor:pointer; 
-  background: #4aa8ff;
-}
-
-.auth-msg{ 
-  margin:10px 0 0; 
-  font-size:14px; 
-}
-
-/* ガラスっぽいボタン（透け＋丸角） */
-.btn-glass{
-  -webkit-appearance: none;
-  appearance: none;
-
-  border-radius: 16px;
-  padding: 10px 14px;
-
-  /* 透ける背景 */
-  background: rgba(255,255,255,.14);
-  border: 1px solid rgba(255, 255, 255, 0.685);
-
-  cursor: pointer;
-}
-
-.btn-glass:hover{
-  background: rgba(255,255,255,.18);
-  border-color: rgba(255,255,255,.35);
-  transform: translateY(-1px);
 }
