--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -553,7 +553,7 @@ html, body{
 }
 
 /* NFC検知時のトップ中央から広がる波紋アニメーション */
-/* .nfc-ripple{
+.nfc-ripple{
   position: fixed;
   top: 28px; 
   left: 50%;
@@ -566,7 +566,7 @@ html, body{
   pointer-events: none;
   z-index: 60;
   animation: nfc-ripple 900ms cubic-bezier(.22,.9,.46,1);
-} */
+}
 
 @keyframes nfc-ripple{
   0%{
@@ -582,3 +582,5 @@ html, body{
     opacity: 0;
   }
 }
+
+
